    'stop playback' and 'stop dynamizer' options.
20. Store data under XDG_DATA_HOME (~/.local/share)
21. Improve responsiveness when loading covers. Only attempt to locate and load
    2 covers in the GUI event loop per iteration. More than this is handled in
    a separate thread.
22. Use "play" command if play button is pressed and there is no current song.

1.1.3
-----
1. (Hopefully) fix selection order of items - and order added to playqueue.
2. Updated German translation.
3. Add Russian translation, thanks to Julia Dronova.
4. Online services support does not require taglib.
5. Fix changing of Music folder for 'Personal' mpd collection.
6. Use QDesktopServices/QStandardPaths to ascertain default music folder for
   'Personal' collections.
7. If no icon is to be used on a message-box button, then ensure the icon is
   cleared.

1.1.2
-----
 1. Fix build due to broken translation files.
 2. After toggling various artists grouping, or group single tracks, update list
    of genres associated with artists.
 3. Fix decoding of details for Online service URLs sent to MPD, and
    subsequently read back.
 4. Dont allow dragging of stream categories onto playqueue.
 5. Replace # in stream names with ${hash} when passing to MPD, and revert when
    URL is displayed.
 6. Fix covers when using album artist for multiple artist albums, and album
    artist name is "Various Artists" - but this has been translated in Cantata.
 7. Dont draw item divider in icon views.
 8. For Qt4 less than 4.8.4, then use old dbus Qt type annotations.
 9. Default to exporting favourites streams XML into home folder.
10. Reset the covers-requested-per-iteration counter after each event loop
    iteration. This should fix the case where sometimes the system tray
    notifications would not have a cover image.

1.1.1
-----
 1. Fix crash in settings dialog if current connection name is removed from
    config file.
 2. Fix starting of per-user MPD instance.