@@ -24,6 +24,11 @@ include(CPack)
 option(ENABLE_TAGLIB "Enable TagLib library(required for tag editing, replaygain calculation, device support, etc)" ON)
 option(ENABLE_TAGLIB_EXTRAS "Enable TagLib-Extras library(used by tag editing, replaygain calculation, device support, etc)" ON)
 option(ENABLE_HTTP_STREAM_PLAYBACK "Enable playback of MPD HTTP streams(Phonon required for Qt4, QtMultimedia for Qt5)" OFF)
+if (WIN32)
+    option(ENABLE_HTTPS_SUPPORT "Enable HTTPS URLs for LAst.fm, Wikipedia, SoundCloud, etc. (Requires a Qt built with SSL support)" OFF)
+else (WIN32)
+    option(ENABLE_HTTPS_SUPPORT "Enable HTTPS URLs for LAst.fm, Wikipedia, SoundCloud, etc." ON)
+endif (WIN32)
 option(ENABLE_KDE "Enable KDE libraries" ON)
 option(ENABLE_QT5 "Build against Qt5" OFF)
 option(ENABLE_MTP "Enable MTP library(required to support MTP devices)" ON)
