@@ -23,6 +23,7 @@
 #cmakedefine TAGLIB_MP4_FOUND 1
 #cmakedefine MTP_FOUND 1
 #cmakedefine ENABLE_HTTP_STREAM_PLAYBACK 1
+#cmakedefine ENABLE_HTTPS_SUPPORT 1
 #cmakedefine FFMPEG_FOUND 1
 #cmakedefine MPG123_FOUND 1
 #cmakedefine CDDB_FOUND 1
