@@ -25,6 +25,7 @@
 #include "networkaccessmanager.h"
 #include "localize.h"
 #include "covers.h"
+#include "config.h"
 #if QT_VERSION >= 0x050000
 #include <QUrlQuery>
 #endif
@@ -66,7 +67,11 @@ QString LastFmEngine::translateLinks(QString text) const
 void LastFmEngine::search(const QStringList &query, Mode mode)
 {
     QStringList fixedQuery=fixQuery(query);
+    #ifdef ENABLE_HTTPS_SUPPORT
+    QUrl url("https://ws.audioscrobbler.com/2.0/");
+    #else
     QUrl url("http://ws.audioscrobbler.com/2.0/");
+    #endif
     #if QT_VERSION < 0x050000
     QUrl &urlQuery=url;
     #else
